# src/features/event/event.controller.ts
@@ -1,5 +1,6 @@
 import { Request as ERequest } from "express";
 import { Body, Delete, Get, Path, Post, Put, Request, Route, Security, Tags } from "tsoa";
+import { AuthenticatedUser } from "types/token.types";
 import { db } from "../../config/database";
 import { responseHandler } from "../../middlewares/response.middleware";
 import Event from "../../models/event.model";
@@ -12,7 +13,7 @@ const database = db();
 
 @Tags("Event Services")
 @Route("events")
-@Security("jwt")
+@Security("BearerAuth")
 export class EventController {
   @Post("/")
   public async createEvent(
@@ -20,7 +21,7 @@ export class EventController {
     @Body() requestBody: EventCreateRequest
   ): Promise<ResponseSuccessType<Event>> {
     const service = new EventService(new EventRepository(database));
-    const response = await service.createEvent(requestBody, request.user);
+    const response = await service.createEvent(requestBody, request.user as AuthenticatedUser);
     return responseHandler(response);
   }
 
@@ -30,7 +31,7 @@ export class EventController {
     @Request() request: ERequest
   ): Promise<ResponseSuccessType<Event>> {
     const service = new EventService(new EventRepository(database));
-    const response = await service.deleteEvent(id, request.user);
+    const response = await service.deleteEvent(id, request.user as AuthenticatedUser);
     return responseHandler(response);
   }
 
@@ -41,7 +42,7 @@ export class EventController {
     @Request() request: ERequest
   ): Promise<ResponseSuccessType<Event | null>> {
     const service = new EventService(new EventRepository(database));
-    const response = await service.updateEvent(id, requestBody, request.user);
+    const response = await service.updateEvent(id, requestBody, request.user as AuthenticatedUser);
     return responseHandler(response);
   }
 
@@ -51,7 +52,7 @@ export class EventController {
     @Request() request: ERequest
   ): Promise<ResponseSuccessType<Event[]>> {
     const service = new EventService(new EventRepository(database));
-    const response = await service.getEventByOrganizer(id, request.user);
+    const response = await service.getEventByOrganizer(id, request.user as AuthenticatedUser);
     return responseHandler(response);
   }
 
@@ -60,7 +61,7 @@ export class EventController {
     @Request() request: ERequest
   ): Promise<ResponseSuccessType<Event[]>> {
     const service = new EventService(new EventRepository(database));
-    const response = await service.getAllEvents(request.user);
+    const response = await service.getAllEvents(request.user as AuthenticatedUser);
     return responseHandler(response);
   }
 
@@ -70,7 +71,7 @@ export class EventController {
     @Request() request: ERequest
   ): Promise<ResponseSuccessType<Event>> {
     const service = new EventService(new EventRepository(database));
-    const response = await service.getEventById(id, request.user);
+    const response = await service.getEventById(id, request.user as AuthenticatedUser);
     return responseHandler(response);
   }
 }
